--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           specialize in creating visually stunning and intuitive websites that
           leave a lasting impression. Did you need a stunning website?
         </p>
-        <a href="#" class="btn1">Hire Me</a>
-        <a href="#" class="btn2">Let's Talk</a>
+        <a href="#" class="btn">Hire Me</a>
+        <a href="#" class="btn">Let's Talk</a>
       </div>
       <div class="home-img">
         <img src="img/profile.png" alt="" />
